--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Aviraj Sidhu",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^1.19.4"
+    "mongoose": "^5.7.9",
+    "nodemon": "^1.19.4",
+    "ua-parser-js": "^0.7.20"
   }
 }
